--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,7 +48,7 @@
     "esm": "^3.2.25",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "4.0.0-beta.11",
-    "jsdom": "^15.2.1",
+    "jsdom": "16.2.0",
     "minimist": "^1.2.0",
     "nyc": "^14.1.1",
     "opn": "^5.5.0",
