--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,10 @@
     "browser": true,
     "node": true
   },
+  "parserOptions": {
+    "ecmaVersion": 9,
+    "sourceType": "module"
+  },
   "rules": {
     "prettier/prettier": ["error"],
     "no-var": "off",
